--- a/index.html
+++ b/index.html
@@ -296,6 +296,12 @@
                     <h2 class="section-heading text-uppercase">Contact</h2>
                     <h3 class="section-subheading" style="color:white;">Contact Claudia Succar for work or inquiries.</h3>
                 </div>
+                <form action="https://formspree.io/f/xrgojppk" method="POST">
+                    <input type="text" name="name" placeholder="Enter name...">
+                    <input type="email" name="_replyto" placeholder="Enter email...">
+                    <input type="submit" value="Send">
+                  </form>
+                <!--
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
@@ -324,6 +330,7 @@
                         <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
                     </div>
                 </form>
+            -->
             </div>
         </section>
         <!-- Footer-->
@@ -529,9 +536,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Contact form JS-->
+        <!-- Contact form JS
         <script src="assets/mail/jqBootstrapValidation.js"></script>
         <script src="assets/mail/contact_me.js"></script>
+        -->
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
