--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container">
-                <div class="masthead-subheading" style="letter-spacing: .8rem;">CLAUDIA SUCCAR</div>
+            <div class="container masthead-text-wrapper">
+                <div id="masthead-name" class="masthead-subheading" style="letter-spacing: .8rem;">CLAUDIA SUCCAR</div>
                 <div class="masthead-heading text-uppercase my-2">Business Analyst</div>
                 <div class="masthead-subheading">Collect, process, analyse and present data - from supporting every day business decisions to fuelling global change.</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">See my portfolio</a>
@@ -98,7 +98,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>
+                                    <!--<div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>-->
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
                             </a>
@@ -112,7 +112,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>
+                                    <!--<div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>-->
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
                             </a>
@@ -126,7 +126,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>
+                                    <!--<div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>-->
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
                             </a>
@@ -140,7 +140,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>
+                                    <!--<div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>-->
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
                             </a>
@@ -154,7 +154,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>
+                                    <!--<div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>-->
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
                             </a>
@@ -168,7 +168,7 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>
+                                    <!--<div class="portfolio-hover-content"><i class="fas fa-search-plus fa-3x"></i></div>-->
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
                             </a>
